syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.auth.grpc";

message AuthRequestGrpc {
  string email = 1;
  string password = 2;
}

message AuthResponseGrpc {
  bool success = 1;
  string token = 2;
  string message = 3;
}

service AuthService { rpc Login(AuthRequestGrpc) returns (AuthResponseGrpc); }
