syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "UserProto";
option java_package = "com.example.grpc";

message UserRequest { int32 id = 1; }

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

service UserService { rpc GetUser(UserRequest) returns (UserResponse); }
